abandoning custom element for svg ns not working on safari issue. start and pause of interval confirmed

--- a/styles/main.css
+++ b/styles/main.css
@@ -43,7 +43,8 @@ body {
   padding: 5px;
 }
 
-.container {
+.container,
+.timer {
   width: 100vw;
   height: 100vw;
   padding: 10px;
@@ -73,6 +74,7 @@ body {
   position: absolute;
   bottom: 10px;
   right: 20px;
+  display: flex;
 }
 .controller button {
   margin: 1px;
@@ -95,14 +97,6 @@ button.control {
   color: inherit;
 }
 
-progress-ring {
-  --size: 400px;
-  --color: aquamarine;
-  --thickness: 40;
-  --background-color: lightgray;
-  width: 100%;
-  height: 100%;
-}
 .modal.layer {
   width: 100vw;
   height: 100vh;
@@ -135,9 +129,7 @@ progress-ring {
 .prompt.card {
   border-radius: 50% 50% 50% 50%;
 }
-.controlsDivStyle {
-  display: none;
-}
+
 #time-input div {
   display: none;
 }
@@ -180,10 +172,30 @@ input:focus {
   border-bottom: 2px solid;
 }
 
+.progress.ring {
+  transition: stroke-dashoffset 1s;
+  transform: rotate(-90deg);
+  transform-origin: 50% 50%;
+  transition-timing-function: linear;
+}
+
 @media screen and (max-width: 600px) {
   .top {
     flex-direction: column;
     font-size: 2.5rem;
     padding: 15px 10px;
   }
+}
+.display {
+  font-size: 1.2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.clock {
+  font-size: 2.4rem;
 }
